@@ -57,6 +57,12 @@ CicPort=5001
 ;
 NetcuePort=/dev/ttyS0
 
+; ForwardNetcuesViaLivewire=Yes|No
+;
+; Forward relay events received RML via Livewire GPIO.
+;
+;ForwardNetcuesViaLivewire=Yes
+
 ; LivewireIpAddress=<ipv4-addr>
 ;
 ; The IPv4 address of the preferred interface of the system running
