@@ -160,10 +160,12 @@ void RouterGpio::SendGpo(int input,int line)
   //  printf("SendGpo(%d,%d)\n",input,line);
   for(int i=0;i<config()->outputQuantity();i++) {
     if(crossPoint(i)==input) {
-      gpio_server->sendGpo(SyRouting::livewireNumber(gpio_lwrp->srcAddress(i)),
-			   line,true,true);
-      syslog(LOG_DEBUG,"sent LiveWire GPO from input %d to %d:%d",input+1,
-	     SyRouting::livewireNumber(gpio_lwrp->srcAddress(i)),line+1);
+      if(config()->forwardNetcuesViaLivewire()) {
+	gpio_server->sendGpo(SyRouting::livewireNumber(gpio_lwrp->srcAddress(i)),
+			     line,true,true);
+	syslog(LOG_DEBUG,"sent LiveWire GPO from input %d to %d:%d",input+1,
+	       SyRouting::livewireNumber(gpio_lwrp->srcAddress(i)),line+1);
+      }
       if(gpio_netcue_device->isOpen()) {
 	QString netcue=config()->outputNetcue(i,line)+"\n";
 	gpio_netcue_device->write(netcue.toUtf8(),netcue.toUtf8().length());
